--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015-rollup": "^3.0.0",
     "babel-preset-react": "^6.24.1",
+    "file-loader": "^1.1.6",
     "prettier": "^1.10.2",
     "react-styleguidist": "^6.2.3",
     "rollup": "^0.55.5",
     "rollup-plugin-babel": "^3.0.3",
+    "rollup-plugin-image": "^1.0.2",
     "rollup-plugin-node-resolve": "^3.0.2",
     "rollup-plugin-uglify": "^3.0.0",
     "webpack": "^3.11.0"
@@ -30,6 +33,7 @@
     "styleguide:build": "styleguidist build"
   },
   "dependencies": {
+    "lodash": "^4.17.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "styled-components": "^3.1.6"
