--- a/package.json
+++ b/package.json
@@ -7,9 +7,7 @@
   "browser": "dist/app-shell-placeholder.umd.js",
   "author": "krishnaxv",
   "license": "MIT",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -32,7 +30,10 @@
     "prettier": "prettier --write 'src/components/**/*.js'",
     "styleguide": "styleguidist server",
     "styleguide:build": "styleguidist build",
-    "github:deploy": "git subtree push --prefix styleguide origin gh-pages"
+    "github:deploy": "git subtree push --prefix styleguide origin gh-pages",
+    "github:pre-tag": "yarn styleguide:build",
+    "github:post-tag": "yarn github:deploy && yarn npm:publish",
+    "npm:publish": "yarn dist && yarn publish"
   },
   "dependencies": {
     "lodash": "^4.17.5",
